docs: fix nav tabs overlapping

--- a/docs/src/app/pages/component-viewer/component-viewer.scss
+++ b/docs/src/app/pages/component-viewer/component-viewer.scss
@@ -34,7 +34,7 @@ app-component-viewer {
   &.docs-sticky-top {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     background: var(--mat-sys-surface);
   }
 }
